# streets

./: README.md  department_data_to_city_addresses.py  department_data_to_city_streets.py  department_data_to_city_streets_names.py  download_department_input_file.py  pyproject.toml  street_names_replacements_after_sort.py  street_names_replacements_before_unique.py  streets-78800.csv
modules/: street_names_replacements_after_sort.py
output/: 78800-addresses.csv  78800-streets-names.csv
